# PySodoku

./: .gitignore  ads.py  ds.py  main.py  pyproject.toml  requirements.txt  save.yaml  setup.py  sodoku.py  test.py  trail.py
PySudoku/: mess.py  run_game.py
PySudoku/core/: config.py  des.py  file_handler.py  player.py  sodoku.py
PySudoku/gui/: about_us.py  about_us_frame.py  app.py  blank_sudoku_frame.py  btn.py  challanges_frame.py  config.py  game_ending_frame.py  game_play_frame.py  handle_componet.py  icons.py  leaderboard_frame.py  left_frame.py  navigation.py  settings_frame.py  sudoku_grid_frame.py  templates.py  welcome_frame.py  welcome_menu.py
PySudoku/saves/: profile.yaml  save.yaml
Pysodoku/: ads.py  basic_sodoku_grid.py  left_frame.py  main.py  new.py  te.py  testinginput.py
Pysodoku/core/: sodoku.py
Pysodoku/gui/: ads.py  app.py  main.py  te.py  welcome_menu.py
core/: file_handler.py
gui/: about_us.py  app.py  blank_sudoku_frame.py  challanges_frame.py  config.py  game_play_frame.py  icons.py  leaderboard_frame.py  navigation.py  settings_frame.py  sudoku_grid_frame.py  welcome_frame.py
saves/: save.yaml
